2015-04-14  Per Bothner  <per@bothner.com>

	* Shell.java (run): Call flush after checkErrors.  This is needed
	now since checkError uses Appendable which doens't auto-flush.

2015-04-10  Per Bothner  <per@bothner.com>

	* repl.java (main): Exit with -1 return code if
	Shell.runFileOrClass reports failure.
	* Shell.java (run): Assume interactive if input is TtyInPort.
	This should work better now that we use CheckConsole.
	(runFile): Check for and handle SyntaxException returned by run.
	(compileSource): Flush standard error after printing messages.

2015-04-04  Per Bothner  <per@bothner.com>

	* standard/location.java (rewriteApply): Add missing null check.

2015-04-03  Per Bothner  <per@bothner.com>

	* lang/Translator.java (rewrite): Convert literal TRUE and FALSE
	to literals with primitive boolean type.

2015-03-22  Per Bothner  <per@bothner.com>

	* standard/location.java (makeLocationProc): More precise return type.

2014-12-19  Jamison Hope  <jrh@theptrgroup.com>

	* standard/define.java (rewriteForm): Make sure BeginExp bexp2 is
	instantiated before attempting to add expressions to it.  This avoids
	a NullPointerException in some define-procedure	invocations.

2015-03-18  Per Bothner  <per@bothner.com>

	* lang/Lambda.java (rewriteFormals): Set IS_REST_PARAMETER and
	IS_PARAMETER for old-fashioned dotted rest argument.

2015-02-26  Per Bothner  <per@bothner.com>

	* standard/let.java (rewrite): Remove unused local variable - which
	could cause a NullPointerException after an error.

2015-02-19  Per Bothner  <per@bothner.com>

	* standard/IfFeature.java (hasfeature): Also assume "in-servlet"
	is true if the current Compilation is generating servlets.

2015-02-17  Per Bothner  <per@bothner.com>

	* standard/define_class.java (scanForDefinitions): Call
	new createFields method of ClassExp.

2015-02-16  Per Bothner  <per@bothner.com>

	* standard/Scheme.java: Some cleanups in initialization.

	* standard/ImportFromLibrary.java (handleImport): When searching